# Sophos

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  sample.env
research_daad/src/research_daad/: crew.py  main.py
research_daad/src/research_daad/config/: agents.yaml
research_daad/src/research_daad/tools/: daad_scraper.py  daad_scraper_handler.py
src/: main.py
src/research_daad/: crew.py  main.py
src/research_daad/config/: tasks.yaml
src/research_daad/tools/: daad_scraper.py  daad_scraper_handler.py
src/research_daad/utils/: llm_handler.py
src/utils/: config.py  llm_handler.py
