[project]
name = "research_daad"
version = "0.1.0"
description = "research-daad using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.140.0,<1.0.0"
]

[project.scripts]
research_daad = "research_daad.main:run"
run_crew = "research_daad.main:run"
train = "research_daad.main:train"
replay = "research_daad.main:replay"
test = "research_daad.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
