[project]
name = "research_daad"
version = "0.1.0"
description = "research-daad using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.140.0,<1.0.0",
    "selenium==4.34.2",
    "beautifulsoup4==4.13.4",
    "webdriver-manager==4.0.2",
    "requests==2.32.4",
    "langchain==0.3.26",
    "langchain-anthropic==0.3.17",
    "langchain-cohere==0.3.5",
    "langchain-community==0.3.27",
    "langchain-core==0.3.68",
    "langchain-experimental==0.3.4",
    "langchain-google-genai==2.1.7",
    "langchain-openai==0.2.14",
    "langchain-text-splitters==0.3.8"
]

[project.scripts]
research_daad = "research_daad.main:run"
run_crew = "research_daad.main:run"
train = "research_daad.main:train"
replay = "research_daad.main:replay"
test = "research_daad.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
